--- a/site/index.html
+++ b/site/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой проект | Главная</title>
+    <title>Команда CTF | Главная</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        /* Добавляем плавную прокрутку */
+        html {
+            scroll-behavior: smooth;
+        }
+        
+        /* Стиль для активных якорей */
+        section {
+            padding: 80px 0;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -16,8 +27,8 @@
             <nav>
                 <ul>
                     <li class="active"><a href="index.html">Главная</a></li>
-                    <li><a href="about.html">О проекте</a></li>
-                    <li><a href="team.html">Команда</a></li>
+                    <li><a href="index.html#features">Особенности</a></li>
+                    <li><a href="team.html">Участники</a></li>
                     <li><a href="journal.html">Журнал</a></li>
                     <li><a href="resources.html">Ресурсы</a></li>
                 </ul>
@@ -28,48 +39,47 @@
         </div>
     </header>
 
-    <section class="hero">
+    <section id="home" class="hero">
         <div class="container">
-            <h1>Название вашего проекта</h1>
-            <p>Краткое описание проекта в одном предложении</p>
-            <a href="about.html" class="btn">Узнать больше</a>
+            <h1>КОМАНДА CTF</h1>
+            <p>Студенческая команда, изучающая CTF и его возможности</p>
+            <a href="team.html" class="btn">Наши участники</a>
         </div>
     </section>
 
-    <section class="features">
+    <section id="features" class="features">
         <div class="container">
             <h2>Основные особенности</h2>
             <div class="features-grid">
                 <div class="feature">
                     <i class="fas fa-lightbulb"></i>
                     <h3>Инновационность</h3>
-                    <p>Опишите инновационные аспекты вашего проекта</p>
+                    <p>Разрабатываем уникальные технологические решения</p>
                 </div>
                 <div class="feature">
                     <i class="fas fa-cogs"></i>
                     <h3>Технологии</h3>
-                    <p>Какие технологии используются в проекте</p>
+                    <p>Используем современные языки программирования и frameworks</p>
                 </div>
                 <div class="feature">
                     <i class="fas fa-chart-line"></i>
                     <h3>Результаты</h3>
-                    <p>Каких результатов планируется достичь</p>
+                    <p>Участвуем в конкурсах и создаем рабочие прототипы</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="about-preview">
+    <section id="about" class="about-preview">
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
                     <h2>О проекте</h2>
-                    <p>Краткое описание проекта. Здесь вы можете разместить основную информацию о вашем проекте, его целях и задачах.</p>
-                    <p>Этот текст вы замените на актуальное описание вашего проекта.</p>
-                    <a href="about.html" class="btn">Подробнее</a>
+                    <p>СТФ - студенческая технологическая команда, специализирующаяся на разработке решений в области IT и робототехники.</p>
+                    <a href="team.html" class="btn">Подробнее об участниках</a>
                 </div>
                 <div class="about-image">
-                    <img src="https://via.placeholder.com/500x300" alt="Проект">
+                    <img src="images/CTFF.png" alt="CTF">
                 </div>
             </div>
         </div>
@@ -84,24 +94,27 @@
                 </div>
                 <div class="footer-col">
                     <h3>Контакты</h3>
-                    <p>Email: project@example.com</p>
+                    <p>Email: artem.schcerbina@mail.ru</p>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-vk"></i></a>
-                        <a href="#"><i class="fab fa-telegram"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/SVArtem"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Мой проект. Все права защищены.</p>
+                <p>&copy; 2025 Команда CTF.</p>
             </div>
         </div>
     </footer>
 
     <script>
-        // Мобильное меню
         document.querySelector('.mobile-menu-btn').addEventListener('click', function() {
             document.querySelector('nav ul').classList.toggle('show');
+        });
+        
+        document.querySelectorAll('nav a').forEach(link => {
+            link.addEventListener('click', () => {
+                document.querySelector('nav ul').classList.remove('show');
+            });
         });
     </script>
 </body>
